src/test/deca/context/valid/valid_complet/cast.deca
// Description:
//    Programme de test de cast.

class A {}

class B extends A {}

class C extends B {}


{
	A a = new A();
	B b = new B();
	C c = new C();
	a = (A)(b);
	a = (A)(c);
}