src/test/deca/context/invalid/invalid_essentiel/cast2.deca
// Description:
//    Programme de test de cast.

class A {}


{
	A a = new A();
	int i = (int)(a);
}